# backend_services

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: README.md  test.yml
auth/: config.py  database.py  functions.py  redis_cache.py  routes.py  tokens.py
auth/tests/: TESTING.md  conftest.py  test_auth.py  test_config.py  test_db.py
mailservice/: config.py  functions.py  redis_subs.py
